resolved mapping issue and cards overlapping issue

--- a/src/components/Home/Generic-Movies/styles.module.scss
+++ b/src/components/Home/Generic-Movies/styles.module.scss
@@ -17,7 +17,6 @@
     padding: 10px 40px 10px 40px;
     background: transparent;
     margin-top: -190px;
-    z-index: 2;
   
     .heading {
       font-family: Ubuntu;
